--- a/share/app/src/main/res/values/ids.xml
+++ b/share/app/src/main/res/values/ids.xml
@@ -77,4 +77,6 @@
     <item name="rl_selected_song_position" type="id" />
     <item name="rl_selected_song_info" type="id" />
 
+    <item name="top_info" type="id" />
+
 </resources>
